--- a/css/nekolized.css
+++ b/css/nekolized.css
@@ -1,29 +1,80 @@
-.btn-outline-neko {
-    color: #00fbff;
-    border-color: #00fbff
-}
-
-.btn-outline-neko:hover {
-    color: #fff;
-    background-color: #00fbff;
-    border-color: #00fbff
-}
-
-.btn-outline-neko.focus,
-.btn-outline-neko:focus {
-    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .5)
-}
-
-.btn-outline-neko.disabled,
-.btn-outline-neko:disabled {
-    color: #00fbff;
-    background-color: transparent
-}
-
-.btn-outline-neko:not(:disabled):not(.disabled).active,
-.btn-outline-neko:not(:disabled):not(.disabled):active,
-.show>.btn-outline-neko.dropdown-toggle {
-    color: #fff;
-    background-color: #00fbff;
-    border-color: #00fbff
-}
+    .btn-outline-neko {
+        color: #00fbff;
+        border-color: #00fbff
+    }
+    
+    .btn-outline-neko:hover {
+        color: #fff;
+        background-color: #00fbff;
+        border-color: #00fbff
+    }
+    
+    .btn-outline-neko.focus,
+    .btn-outline-neko:focus {
+        box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .5)
+    }
+    
+    .btn-outline-neko.disabled,
+    .btn-outline-neko:disabled {
+        color: #00fbff;
+        background-color: transparent
+    }
+    
+    .btn-outline-neko:not(:disabled):not(.disabled).active,
+    .btn-outline-neko:not(:disabled):not(.disabled):active,
+    .show>.btn-outline-neko.dropdown-toggle {
+        color: #fff;
+        background-color: #00fbff;
+        border-color: #00fbff
+    }
+    
+    .bg-neko {
+        background-color: #002d30!important
+    }
+    
+    a.bg-neko:focus,
+    a.bg-neko:hover,
+    button.bg-neko:focus,
+    button.bg-neko:hover {
+        background-color: #002124!important
+    }
+    
+    .btn-telegram {
+        color: #fff;
+        background-color: #0088cc;
+        border-color: #0088cc
+    }
+    
+    .btn-telegram:hover {
+        color: #fff;
+        background-color: #0088cc;
+        border-color: #0088cc
+    }
+    
+    .btn-telegram.focus,
+    .btn-telegram:focus {
+        color: #fff;
+        background-color: #0088cc;
+        border-color: #0088cc;
+        box-shadow: 0 0 0 .2rem rgba(38, 143, 255, .5)
+    }
+    
+    .btn-facebook {
+        color: #fff;
+        background-color: #4267B2;
+        border-color: #4267B2;
+    }
+    
+    .btn-facebook:hover {
+        color: #fff;
+        background-color: #4267B2;
+        border-color: #4267B2
+    }
+    
+    .btn-facebook.focus,
+    .btn-facebook:focus {
+        color: #fff;
+        background-color: #4267B2;
+        border-color: #4267B2;
+        box-shadow: 0 0 0 .2rem rgba(38, 143, 255, .5)
+    }
